--- a/index.html
+++ b/index.html
@@ -165,40 +165,40 @@
                 <li>
                     <div class="card">
                         <img class="cartadder" src="aeondialimg/smartwatch1.jpg" alt="">
-                        <p class="title">Carbon brown watch</p>
+                        <p class="title">Apple Watch SE</p>
                         <p class="type">Classic</p>
-                        <p class="price">$514</p>
-                        <button id="addtocart" onclick="addToCart('Carbon brown watch', 342, 'aeondialimg/smartwatch1.jpg' )"><img src="aeondialimg/231_-_1_-_Cart.jpg" width="32px">Add to
+                        <p class="price">$120</p>
+                        <button id="addtocart" onclick="addToCart('Apple Watch SE', 120, 'aeondialimg/smartwatch1.jpg' )"><img src="aeondialimg/231_-_1_-_Cart.jpg" width="32px">Add to
                             cart</button>
                     </div>
                 </li>
                 <li>
                     <div class="card">
                         <img class="cartadder" src="aeondialimg/smartwatch1.jpg" alt="">
-                        <p class="title">Carbon grey watch</p>
+                        <p class="title">Apple Watch S8</p>
                         <p class="type">Urban</p>
-                        <p class="price">$514</p>
-                        <button id="addtocart" onclick="addToCart('Carbon grey watch', 311, 'aeondialimg/smartwatch1.jpg')"><img src="aeondialimg/231_-_1_-_Cart.jpg" width="32px">Add to
+                        <p class="price">$211</p>
+                        <button id="addtocart" onclick="addToCart('Apple Watch S8', 211, 'aeondialimg/smartwatch1.jpg')"><img src="aeondialimg/231_-_1_-_Cart.jpg" width="32px">Add to
                             cart</button>
                     </div>
                 </li>
                 <li>
                     <div class="card">
                         <img class="cartadder" src="aeondialimg/smartwatch1.jpg" alt="">
-                        <p class="title">Carbon orange watch</p>
+                        <p class="title">Apple Watch Hermes</p>
                         <p class="type">Classic</p>
-                        <p class="price">$514</p>
-                        <button id="addtocart" onclick="addToCart('Carbon orange watch',233, 'aeondialimg/smartwatch1.jpg' )"><img src="aeondialimg/231_-_1_-_Cart.jpg" width="32px">Add to
+                        <p class="price">$213</p>
+                        <button id="addtocart" onclick="addToCart('Apple Watch Hermes',213, 'aeondialimg/smartwatch1.jpg' )"><img src="aeondialimg/231_-_1_-_Cart.jpg" width="32px">Add to
                             cart</button>
                     </div>
                 </li>
                 <li>
                     <div class="card">
                         <img class="cartadder" src="aeondialimg/smartwatch5.jpg" alt="">
-                        <p class="title">Carbon blue watch</p>
+                        <p class="title">Apple Watch Ultra</p>
                         <p class="type">Modern</p>
                         <p class="price">$514</p>
-                        <button id="addtocart" onclick="addToCart('Carbon blue watch', 514, 'aeondialimg/smartwatch1.jpg' )"><img  src="aeondialimg/231_-_1_-_Cart.jpg" width="32px">Add to
+                        <button id="addtocart" onclick="addToCart('Apple Watch Ultra', 514, 'aeondialimg/smartwatch1.jpg' )"><img  src="aeondialimg/231_-_1_-_Cart.jpg" width="32px">Add to
                             cart</button>
                     </div>
                 </li>
@@ -293,7 +293,7 @@ closeMenu.addEventListener("click", function(){
   sidebar.style.transform="translate(310px)"
 })
 
-const navbar= document.querySelector(".navigationbar")
+//const navbar= document.querySelector(".navigationbar")
 navbar.addEventListener("click", function(){
   sidebar.style.transform="translate(0px)"
 })
