--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <div class="products">
         <h3>Apple Watch <span id="blue">Products</span></h3>
         <p5>Multiple choices from our store to choose from.
-            Find that with is right for you.      </p5>
+            Find that which is right for you.      </p5>
 
         <div class="displayproducts">
             <ul>
@@ -301,3 +301,4 @@ navbar.addEventListener("click", function(){
 </body>
 
 </html>
+
