--- a/cart.html
+++ b/cart.html
@@ -53,11 +53,11 @@
             <li onclick="window.location.href='index.html'">Pages</li>
         </ul>
 
-        <ul id="sidesocial">
+        <!--<ul id="sidesocial">
              <li onclick="window.location.href='www.facebook.com'"><img src="aeondialimg/facebook.png" alt=""></li>
             <li onclick="window.location.href='www.x.com'"><img src="aeondialimg/x.jpg" width="60px"></li>
             <li onclick="window.location.href='www.instagram.com'"><img src="aeondialimg/instagram.png" alt=""></li>
-        </ul>
+        </ul>-->
  </div>
  </div>
  </div>
@@ -226,4 +226,5 @@
     </body>
 
 </html>
+
 
