--- a/cart.html
+++ b/cart.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0XL3SEFZ6S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0XL3SEFZ6S');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart</title>
@@ -27,11 +36,11 @@
             </div>
             <img src="aeondialimg/menu.jpg" width="40px" id="menu">
             <ul id="navitems">
-                <li class="hideonmobile">Home</li>
-                <li class="hideonmobile">Collections</li>
-                <li class="hideonmobile">Watches</li>
-                <li class="hideonmobile">Quick find</li>
-                <li class="hideonmobile">Pages</li>
+                <li class="hideonmobile" onclick="window.location.href='index.html'">Home</li>
+                <li class="hideonmobile" onclick="window.location.href='index.html'">Collections</li>
+                <li class="hideonmobile" onclick="window.location.href='index.html'">Watches</li>
+                <li class="hideonmobile" onclick="window.location.href='index.html'">Quick find</li>
+                <li class="hideonmobile" onclick="window.location.href='index.html'">Pages</li>
             </ul>
 
             <button class="contactus">Contact Us</button>
@@ -226,5 +235,6 @@
     </body>
 
 </html>
+
 
 
